--- a/index.html
+++ b/index.html
@@ -60,9 +60,7 @@
                     </div>
                 </div>
                 <div>
-                    <textarea
-                        placeholder="I am a natural person investing on my own behalf as a sole owner,joint tenant, or tenant in common.">
-                    </textarea>
+                    <textarea placeholder="I am a natural person investing on my own behalf as a sole owner,joint tenant, or tenant in common."></textarea>
                 </div>
                 <div class="agreement">
                     <input type="checkbox">
