--- a/index.html
+++ b/index.html
@@ -1,47 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, text/css">
     <title>Document</title>
-    <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="https://www.fontsquirrel.com/license/barlow">
+    <link rel="stylesheet" type="text/css" href="./style.css">
 </head>
 
 <body>
     <div class="content">
-        <div class="bg">
+        <div class="content__bg">
             <img src="./img/logo.svg" alt="logo">
         </div>
-        <div class="form">
-            <div class="form_wrapper">
+        <div class="content__form">
+            <div class="form-wrapper">
                 <div>
                     <h2>Get iintoo it today</h2>
                 </div>
                 <div><span>There is not charge or obligation upon registration</span></div>
-                <div class="form_buttons">
+                <div class="__buttons">
                     <button><img src="./img/facebook.svg" alt="f" width="22px"><span>Register with
                             Facebook</span></button>
                     <button><img src="./img/linkedin.svg" alt="l" width="22px"><span>Register with
                             LinkedIn</span></button>
                 </div>
-                <div class="form_or">
+                <div class="__or">
                     <hr />
                     <span>OR</span>
                     <hr />
                 </div>
-                <form class="form_inputs">
-                    <div class="input"><label for="email">Email</label><br><input type="email"
+                <form class="__inputs">
+                    <div class="form-wrapper__inputs_input"><label for="email">Email</label><br><input type="email"
                             placeholder="gus.goodwin@gmail.com"></div>
-                    <div class="input"><label for="phone">Phone</label><br><input type="text"></div>
+                    <div class="form-wrapper__inputs_input"><label for="phone">Phone</label><br><input type="text">
+                    </div>
                 </form>
-                <div class="h3">
+                <div class="__h3">
                     <h3>What type of investor are you?</h3>
                 </div>
-                <div class="span"><span>Select the type of investor you are below.</span></div>
-                <div class="radio">
+                <div class="__span"><span>Select the type of investor you are below.</span></div>
+                <div class="__radio">
                     <div>
                         <input type="radio" id="individual" name="radio">
                         <label for="individual">Individual &#x24D8;</label>
@@ -60,15 +60,15 @@
                     </div>
                 </div>
                 <div>
-                    <textarea placeholder="I am a natural person investing on my own behalf as a sole owner,joint tenant, or tenant in common."></textarea>
+                    <textarea
+                        placeholder="I am a natural person investing on my own behalf as a sole owner,joint tenant, or tenant in common."></textarea>
                 </div>
-                <div class="agreement">
+                <div class="__agreement">
                     <input type="checkbox">
-                    <span>I agree to the terms and receiving notifications from iintoo
-                        <a href="#">View full terms</a>
-                    </span>
+                    <span>I agree to the terms and receiving notifications from iintoo<a href="#">View full
+                            terms</a></span>
                 </div>
-                <div class="account">
+                <div class="__account">
                     <button>Create Account</button>
                 </div>
             </div>
